{
    "name": "GameInput",
    "maps": [
        {
            "name": "GameActions",
            "id": "b4ad5fd0-acc7-4b7b-aa82-8796f76e2fc2",
            "actions": [
                {
                    "name": "CameraMovement",
                    "type": "PassThrough",
                    "id": "fcea2aa3-68ff-4eb4-8ccd-398d7492fff8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1befee67-bc15-48c9-83b5-7bc68ba3a135",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}